--- a/AppAndroid/solar/android/app/src/main/AndroidManifest.xml
+++ b/AppAndroid/solar/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.solar">
+        <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="solar"
+        android:label="SolarIOT"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
